[gd_scene load_steps=11 format=3 uid="uid://bad4mrkp47uvv"]

[ext_resource type="Script" path="res://menu.gd" id="1_4vun4"]
[ext_resource type="Texture2D" uid="uid://dtjx0csuu7enb" path="res://assets/ui/menu-background-1-one-pane.png" id="1_i7kja"]
[ext_resource type="FontFile" uid="uid://dv36djtg8a2de" path="res://3x3pixel/3x3pixel.ttf" id="2_rldtb"]
[ext_resource type="PackedScene" uid="uid://bs6nh8tic4s4u" path="res://tile_map.tscn" id="3_f3i1p"]
[ext_resource type="Texture2D" uid="uid://tqxk101446v" path="res://assets/ui/enter-prompt.png" id="3_l63lq"]
[ext_resource type="PackedScene" uid="uid://daywsgla5ottt" path="res://player.tscn" id="4_l377y"]
[ext_resource type="PackedScene" uid="uid://bo10mg1e51e2i" path="res://player_camera.tscn" id="7_h850g"]

[sub_resource type="AtlasTexture" id="AtlasTexture_p850p"]
atlas = ExtResource("3_l63lq")
region = Rect2(0, 0, 16, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_rij3q"]
atlas = ExtResource("3_l63lq")
region = Rect2(16, 0, 16, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_ccfap"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p850p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rij3q")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[node name="Menu" type="Node2D"]
texture_filter = 1
script = ExtResource("1_4vun4")

[node name="TutorialRun" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 64.0
offset_bottom = 64.0

[node name="TextureRect" type="TextureRect" parent="TutorialRun"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_i7kja")

[node name="Label" type="Label" parent="TutorialRun"]
layout_mode = 0
offset_left = 16.0
offset_top = 14.0
offset_right = 48.0
offset_bottom = 32.0
theme_override_constants/outline_size = 0
theme_override_constants/shadow_outline_size = 0
theme_override_constants/line_spacing = 0
theme_override_fonts/font = ExtResource("2_rldtb")
theme_override_font_sizes/font_size = 8
text = "run
with
<-  ->"
horizontal_alignment = 1
justification_flags = 160

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="TutorialRun"]
position = Vector2(48, 56)
sprite_frames = SubResource("SpriteFrames_ccfap")
autoplay = "default"

[node name="SpawnPt" type="Node2D" parent="TutorialRun"]

[node name="TutorialJump" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 64.0
offset_right = 128.0
offset_bottom = 64.0

[node name="TextureRect" type="TextureRect" parent="TutorialJump"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_i7kja")

[node name="Label" type="Label" parent="TutorialJump"]
layout_mode = 0
offset_left = 16.0
offset_top = 14.0
offset_right = 48.0
offset_bottom = 32.0
theme_override_constants/outline_size = 0
theme_override_constants/shadow_outline_size = 0
theme_override_constants/line_spacing = 0
theme_override_fonts/font = ExtResource("2_rldtb")
theme_override_font_sizes/font_size = 8
text = "jump
with
space"
justification_flags = 160

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="TutorialJump"]
position = Vector2(48, 56)
sprite_frames = SubResource("SpriteFrames_ccfap")
autoplay = "default"

[node name="SpawnPt" type="Node2D" parent="TutorialJump"]
position = Vector2(16, 40)

[node name="TutorialDash" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 128.0
offset_right = 192.0
offset_bottom = 64.0

[node name="TextureRect" type="TextureRect" parent="TutorialDash"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0
texture = ExtResource("1_i7kja")

[node name="Label" type="Label" parent="TutorialDash"]
layout_mode = 0
offset_left = 16.0
offset_top = 14.0
offset_right = 48.0
offset_bottom = 38.0
theme_override_constants/outline_size = 0
theme_override_constants/shadow_outline_size = 0
theme_override_constants/line_spacing = 0
theme_override_fonts/font = ExtResource("2_rldtb")
theme_override_font_sizes/font_size = 10
text = "dash
with
"
horizontal_alignment = 1
justification_flags = 160

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="TutorialDash"]
position = Vector2(48, 56)
sprite_frames = SubResource("SpriteFrames_ccfap")
autoplay = "default"

[node name="SpawnPt" type="Node2D" parent="TutorialDash"]
position = Vector2(16, 40)

[node name="Label2" type="Label" parent="TutorialDash"]
layout_mode = 0
offset_left = 28.0
offset_top = 28.0
offset_right = 36.0
offset_bottom = 41.0
theme_override_font_sizes/font_size = 8
text = "z"

[node name="TutorialStuck" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 192.0
offset_right = 256.0
offset_bottom = 64.0

[node name="TextureRect" type="TextureRect" parent="TutorialStuck"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0
texture = ExtResource("1_i7kja")

[node name="Label" type="Label" parent="TutorialStuck"]
layout_mode = 0
offset_left = 11.0
offset_top = 13.0
offset_right = 53.0
offset_bottom = 37.0
theme_override_constants/outline_size = 0
theme_override_constants/shadow_outline_size = 0
theme_override_constants/line_spacing = 0
theme_override_fonts/font = ExtResource("2_rldtb")
theme_override_font_sizes/font_size = 10
text = "Stuck?
press
"
horizontal_alignment = 1
justification_flags = 160

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="TutorialStuck"]
position = Vector2(48, 56)
sprite_frames = SubResource("SpriteFrames_ccfap")
autoplay = "default"

[node name="SpawnPt" type="Node2D" parent="TutorialStuck"]
position = Vector2(16, 40)

[node name="Label2" type="Label" parent="TutorialStuck"]
layout_mode = 0
offset_left = 25.0
offset_top = 27.0
offset_right = 65.0
offset_bottom = 53.0
theme_override_font_sizes/font_size = 8
text = "F1"

[node name="TileMap" parent="." instance=ExtResource("3_f3i1p")]
layer_0/z_index = -1
layer_0/tile_data = PackedInt32Array(262145, 65536, 0, 262146, 131072, 3, 262147, 131072, 3, 262148, 131072, 3, 262149, 131072, 3, 262150, 196608, 0, 327686, 0, 1, 393222, 196608, 2, 393221, 131072, 3, 393220, 131072, 3, 393219, 131072, 3, 393218, 131072, 3, 393217, 65536, 2, 327681, 0, 1, 393225, 65536, 2, 393226, 131072, 3, 393227, 131072, 3, 393228, 131072, 3, 393229, 131072, 3, 393230, 196608, 2, 327694, 0, 1, 262158, 0, 1, 196622, 196608, 0, 196621, 131072, 3, 196620, 131072, 3, 196619, 131072, 3, 196618, 131072, 3, 196617, 65536, 0, 262153, 0, 1, 327689, 0, 1, 393233, 65536, 2, 393234, 131072, 3, 393235, 131072, 3, 393236, 131072, 3, 393237, 131072, 3, 393238, 196608, 2, 327702, 0, 1, 262166, 0, 1, 262161, 0, 1, 327697, 0, 1, 196625, 65536, 0, 196626, 131072, 3, 196627, 131072, 3, 196628, 131072, 3, 196629, 131072, 3, 196630, 196608, 0, 196633, 65536, 0, 262169, 0, 1, 327705, 0, 1, 196634, 131072, 3, 196635, 131072, 3, 327711, 0, 1, 196636, 131072, 3, 196637, 131072, 3, 196638, 131072, 3, 196639, 196608, 0, 262175, 0, 1, 393241, 65536, 2, 393242, 131072, 3, 393243, 131072, 3, 393244, 131072, 3, 393245, 131072, 3, 393246, 131072, 3, 393247, 196608, 2)

[node name="Player" parent="." instance=ExtResource("4_l377y")]
position = Vector2(16, 40)

[node name="PlayerCamera" parent="." instance=ExtResource("7_h850g")]
